--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ org.gradle.jvmargs=-Xmx1536m
 artifactory_contextUrl=http://jcenter.chaozhuo.org/artifactory
 artifactory_user=deploy
 artifactory_password=AP2kF2y1XcFCUQ5HX7HSRMgrf1b
+isNeedLoginModel=true
+#isNeedLoginModel = false
