--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
+
+    if (isNeedLoginModel.toBoolean()) {
+        implementation project(':login')
+    }
 }
