--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,23 +38,11 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-v4:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-    implementation 'com.chaozhuo.networksdk:utils:2.04'
-    implementation 'com.chaozhuo.networksdk:onlineconfig:2.01'
-    implementation 'com.orhanobut:logger:1.8'
-    implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    // implementation 只给当前项目使用 api 可以给第三方
+    implementation project(':common')
     if (isNeedLoginModel.toBoolean()) {
         implementation project(':login')
     }
+
 }
