--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.chaozhuo.parentmanager">
 
     <application
-        android:name=".App"
+        android:name="com.chaozhuo.common.BaseApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,12 +20,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ScrollingActivity"
-            android:label="@string/title_activity_scrolling" />
-        <activity
-            android:name=".fragment.ScrollingActivity"
-            android:label="@string/title_activity_scrolling"></activity>
     </application>
 
 </manifest>
