--- a/login/build.gradle
+++ b/login/build.gradle
@@ -6,13 +6,13 @@ if (isNeedLoginModel.toBoolean()) {
 
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion rootProject.sdkVersion
 
 
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 26
+        minSdkVersion rootProject.minSdkVersion
+        targetSdkVersion rootProject.targetVersion
         versionCode 1
         versionName "1.0"
 
@@ -44,11 +44,6 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':common')
 }
