--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,13 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion rootProject.sdkVersion
     defaultConfig {
-        applicationId "com.chaozhuo.parentmanager"
+        applicationId "com.fewwind.learn"
         minSdkVersion rootProject.minSdkVersion
         targetSdkVersion rootProject.targetVersion
         versionCode rootProject.appVersionCode
         versionName rootProject.appVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
     }
     buildTypes {
         release {
@@ -44,6 +45,9 @@ dependencies {
     if (isNeedLoginModel.toBoolean()) {
         implementation project(':login')
     }
-
+    api 'com.jakewharton:butterknife:7.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation project(':route_api')
+    implementation project(':route_annotation')
+    annotationProcessor project(':RouteProcess')
 }
