--- a/common/build.gradle
+++ b/common/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     api 'com.android.support:cardview-v7:28.0.0'
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
     api 'io.reactivex.rxjava2:rxjava:2.1.10'
+    api 'com.squareup.picasso:picasso:2.5.2'
 }
