--- a/common/build.gradle
+++ b/common/build.gradle
@@ -37,4 +37,12 @@ dependencies {
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
     api 'io.reactivex.rxjava2:rxjava:2.1.10'
     api 'com.squareup.picasso:picasso:2.5.2'
+    api 'com.squareup.retrofit2:retrofit:2.3.0'
+    api 'com.squareup.retrofit2:converter-gson:2.2.0'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+    api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+
+    def lifecycle_version = "1.1.1"
+    // ViewModel and LiveData
+    api "android.arch.lifecycle:extensions:$lifecycle_version"
 }
