--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     
     repositories {
         google()
-        jcenter()
+        jcenter(){ url "http://jcenter.bintray.com/"}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
@@ -18,7 +18,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        jcenter(){ url "http://jcenter.bintray.com/"}
         maven {
             url "${artifactory_contextUrl}/libs-release"
             name "artifactory"
