增加组件化

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.chaozhuo.parentmanager">
 
     <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" />
@@ -11,6 +12,7 @@
     <application
         android:name=".App"
         android:allowBackup="true"
+        tools:replace="name"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
