--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.71'
+    ext.kotlin_version = '1.3.21'
 
     repositories {
         google()
+        maven{url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         jcenter(){ url "http://jcenter.bintray.com/"}
     }
     dependencies {
@@ -21,6 +22,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven{url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         jcenter(){ url "http://jcenter.bintray.com/"}
         maven {
             url "${artifactory_contextUrl}/libs-release"
