--- a/common/build.gradle
+++ b/common/build.gradle
@@ -11,6 +11,11 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
     }
 
     buildTypes {
@@ -45,4 +50,6 @@ dependencies {
     def lifecycle_version = "1.1.1"
     // ViewModel and LiveData
     api "android.arch.lifecycle:extensions:$lifecycle_version"
+    api 'com.alibaba:arouter-api:1.5.0'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.2.2'
 }
