--- a/login/build.gradle
+++ b/login/build.gradle
@@ -20,6 +20,13 @@ android {
         if (!isNeedLoginModel.toBoolean()) {
             applicationId "com.test.model"
         }
+
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
     }
 
     buildTypes {
@@ -46,4 +53,5 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':common')
+    annotationProcessor 'com.alibaba:arouter-compiler:1.2.2'
 }
