--- a/common/build.gradle
+++ b/common/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     api 'com.squareup.retrofit2:converter-gson:2.2.0'
     api 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-
+    api 'com.rxjava.rxlife:rxlife:1.0.8'
     def lifecycle_version = "1.1.1"
     // ViewModel and LiveData
     api "android.arch.lifecycle:extensions:$lifecycle_version"
