fix gradle exception

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,8 @@ android {
         javaCompileOptions {
             annotationProcessorOptions {
                 includeCompileClasspath = true
-                arguments = [AROUTER_MODULE_NAME: project.getName()]
-//                arguments = [eventBusIndex: 'com.chaozhuo.parentmanager.MyEventBusIndex']
+//                arguments = [AROUTER_MODULE_NAME: project.getName()]
+                arguments = [eventBusIndex: 'com.chaozhuo.parentmanager.MyEventBusIndex']
             }
         }
     }
@@ -78,7 +78,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
     implementation 'org.greenrobot:eventbus:3.0.0'
-    annotationProcessor 'com.alibaba:arouter-compiler:1.2.2'
+//    annotationProcessor 'com.alibaba:arouter-compiler:1.2.2'
     annotationProcessor  'org.greenrobot:eventbus-annotation-processor:3.0.1'
 }
 
