--- a/common/build.gradle
+++ b/common/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     // ViewModel and LiveData
     api "android.arch.lifecycle:extensions:$lifecycle_version"
     api 'com.alibaba:arouter-api:1.5.0'
+    api 'pub.devrel:easypermissions:2.0.0'
     annotationProcessor 'com.alibaba:arouter-compiler:1.2.2'
 }
