--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.0.0'
 //    annotationProcessor 'com.alibaba:arouter-compiler:1.2.2'
     annotationProcessor  'org.greenrobot:eventbus-annotation-processor:3.0.1'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.6.1'
 }
 
 
