--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
             annotationProcessorOptions {
                 includeCompileClasspath = true
 //                arguments = [AROUTER_MODULE_NAME: project.getName()]
+                arguments = [fewwind: "Word"]
                 arguments = [eventBusIndex: 'com.chaozhuo.parentmanager.MyEventBusIndex']
             }
         }
@@ -70,9 +71,6 @@ dependencies {
     }
     api 'com.jakewharton:butterknife:7.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation project(':route_api')
-    implementation project(':route_annotation')
-    annotationProcessor project(':RouteProcess')
     implementation 'org.aspectj:aspectjrt:1.8.9'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
@@ -81,6 +79,7 @@ dependencies {
 //    annotationProcessor 'com.alibaba:arouter-compiler:1.2.2'
     annotationProcessor  'org.greenrobot:eventbus-annotation-processor:3.0.1'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.6.1'
+    annotationProcessor project(':RouteProcess')
 }
 
 
