--- a/login/build.gradle
+++ b/login/build.gradle
@@ -25,6 +25,7 @@ android {
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [AROUTER_MODULE_NAME: project.getName()]
+                arguments = [fewwind: project.getName()]
             }
         }
     }
@@ -53,5 +54,6 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':common')
+    annotationProcessor project(':RouteProcess')
 //    annotationProcessor 'com.alibaba:arouter-compiler:1.2.2'
 }
