--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'android-aspectjx'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion rootProject.sdkVersion
@@ -77,6 +78,9 @@ dependencies {
 //    annotationProcessor  'org.greenrobot:eventbus-annotation-processor:3.0.1'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.6.1'
     annotationProcessor project(':RouteProcess')
+    implementation "android.arch.persistence.room:runtime:$rootProject.room_version"
+//    annotationProcessor "android.arch.persistence.room:compiler:$rootProject.room_version"
+    kapt 'android.arch.persistence.room:compiler:1.1.1'
 }
 
 
