--- a/common/build.gradle
+++ b/common/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     api project(':route_api')
     api project(':route_annotation')
     annotationProcessor project(':RouteProcess')
+    implementation 'com.rxjava.rxlife:rxlife:1.0.8'
+    implementation "android.arch.persistence.room:rxjava2:$rootProject.room_version"
 }
