组件化-使用meta-data的方式初始化module中的app

--- a/login/src/main/AndroidManifest.xml
+++ b/login/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application android:name="com.feng.login.LoginApp">
         <activity android:name="com.feng.login.LoginActivity"></activity>
+        <meta-data android:name="LoginAppInit" android:value="IAppInit"/>
     </application>
 
 </manifest>
