--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -6,10 +6,10 @@ dependencies {
     compile gradleApi()
     compile localGroovy()
 
-//    compile 'com.android.tools.build:gradle:3.4.2'
-//    //ASM相关依赖
-//    implementation 'org.ow2.asm:asm:7.1'
-//    implementation 'org.ow2.asm:asm-commons:7.1'
+    compile 'com.android.tools.build:gradle:3.4.1'
+    //ASM相关依赖
+    implementation 'org.ow2.asm:asm:7.1'
+    implementation 'org.ow2.asm:asm-commons:7.1'
 }
 
 repositories {
